k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repl
  namespace: repl
  labels:
    app: repl
spec:
  type: ClusterIP
  selector:
    app: repl
  ports:
    - name: http
      port: 80
      targetPort: http
